Remove more hard-coded ems

--- a/client/main.styl
+++ b/client/main.styl
@@ -93,6 +93,10 @@ em {
   font-style italic
 }
 
+img {
+  vertical-align top // or else image gets added padding on bottom
+}
+
 p {
   margin-bottom .5em
 }
