--- a/client/projects/list_item.styl
+++ b/client/projects/list_item.styl
@@ -1,10 +1,10 @@
 .projects-list-item {
   & {
     border-bottom $colored-border
-    padding 2em 0
+    padding unit(2 * $lambda, em) 0
 
     &:first-child {
-      padding-top 1em
+      padding-top unit($lambda, em)
     }
 
     &:last-child {
