--- a/client/projects/content.styl
+++ b/client/projects/content.styl
@@ -1,12 +1,7 @@
 .projects-content {
-  line-height 1.4
-
   dt {
     font-weight bold
-  }
-
-  dd {
-    margin-bottom 1em
+    margin-top unit($lambda, em)
   }
 
   +e(list) {
