Finished margin refactoring?

--- a/client/content/navbar.styl
+++ b/client/content/navbar.styl
@@ -45,7 +45,7 @@ $navbar-lambda = 3 * $lambda
   }
 
   +e(sidebar-trigger-icon) {
-    font-size unit($navbar-lambda / 2, em);
+    font-size unit($navbar-lambda / 2, em)
   }
 }
 
