--- a/client/projects/content.styl
+++ b/client/projects/content.styl
@@ -4,8 +4,12 @@
     margin-top unit($lambda, em)
   }
 
+  +e(custom-content) {
+    margin-top unit($lambda, em)
+  }
+
   +e(list) {
     list-style disc
-    padding-left 1.25em
+    padding-left unit($lambda, em)
   }
 }
