--- a/client/resume/resume.styl
+++ b/client/resume/resume.styl
@@ -1,39 +1,22 @@
 .resume-category {
-  margin-top 1em
-
   .resume-entry:first-of-type {
-    margin-top auto
+    margin-top 0
   }
 
-  h2,
-  h3 {
-    margin-bottom .5em
+  +e(container) {
+    border-bottom $colored-border
+    padding unit(2 * $lambda, em) 0
+
+    &:first-child {
+      padding-top unit($lambda, em)
+    }
+
+    &:last-child {
+      border-width 0
+    }
   }
 }
 
 .resume-entry {
   margin 2em 0 0
-}
-
-.resume-entry-image-container {
-  padding-top .5em
-}
-
-.resume-entry-image {
-  col(1/3)
-
-  img {
-    width 100%
-  }
-}
-
-.resume-entry-other {
-  col(2/3)
-}
-
-.resume-entry-image,
-.resume-entry-other {
-  +below('m') {
-    stack()
-  }
 }
