--- a/client/shared/pdf.styl
+++ b/client/shared/pdf.styl
@@ -1,13 +1,9 @@
-$pdf-width = px-to-em(720px)
-
 .gsax-pdf {
   height 0
   margin 0 auto
   max-width 100%
-  padding-bottom 56.25% /* 16:9 */
-  padding-top 25px
+  padding-bottom (6 / 8 * 100)%
   position relative
-  width $pdf-viewer-width
 
   iframe {
     height 100%
