--- a/client/main.styl
+++ b/client/main.styl
@@ -13,10 +13,6 @@ m(name) {
   }
 }
 
-px-to-em($value) {
-  return unit($value/16, 'em')
-}
-
 // Colors
 $my-green = #198565
 $darker-gray = #222
@@ -26,8 +22,8 @@ $white = white
 $header-ratio = 1.25
 
 // Borders
-$colored-border = px-to-em(1px) $my-green solid
-$muted-border = px-to-em(1px) $light-gray solid
+$colored-border = .1rem $my-green solid
+$muted-border = .1rem $light-gray solid
 
 $lambda = 1.5
 $h1-lambda = $header-ratio ** 3
