Remove all ems! yay

--- a/client/content/handler.styl
+++ b/client/content/handler.styl
@@ -13,11 +13,13 @@
   }
 
   +e(backdrop) {
+    $infinity = unit(1000 * $lambda, em)
+
     background rgba($dark-gray, .5)
-    height 1000em
+    height $infinity
     left 0
     position absolute
     top 0
-    width 1000em
+    width $infinity
   }
 }
