--- a/client/fragments/bullet_list.styl
+++ b/client/fragments/bullet_list.styl
@@ -1,9 +1,9 @@
 .fragments-bullet-list {
   list-style disc
-  padding-left 1.25em
+  padding-left unit($lambda, em)
 
   +e(item) {
-    margin-top .5em
+    margin-top unit($lambda, em)
 
     &:first-child {
       margin-top 0
