--- a/client/projects/grid.styl
+++ b/client/projects/grid.styl
@@ -8,11 +8,7 @@
 
     +below('m') {
       stack()
-      padding 1em 0
-
-      &:first-child {
-        padding-top 2em
-      }
+      padding unit($lambda, em) 0
     }
   }
 
