--- a/client/content/footer/info_tags.styl
+++ b/client/content/footer/info_tags.styl
@@ -11,13 +11,13 @@
 
   +e(resume-icon) {
     .fa-file-text {
-      margin: px-to-em(-1px) 0 0 px-to-em(.5px)
+      margin -1px 0 0 .5px // hard coding
     }
   }
 
   +e(email-icon) {
     .fa-envelope {
-      margin-top: px-to-em(-1px)
+      margin-top -1px // hard coding
     }
   }
 }
