--- a/client/projects/list_item.styl
+++ b/client/projects/list_item.styl
@@ -4,7 +4,7 @@
     padding unit(2 * $lambda, em) 0
 
     &:first-child {
-      padding-top unit($lambda, em)
+      padding-top 0
     }
 
     &:last-child {
