--- a/client/resume/resume.styl
+++ b/client/resume/resume.styl
@@ -8,7 +8,7 @@
     padding unit(2 * $lambda, em) 0
 
     &:first-child {
-      padding-top unit($lambda, em)
+      padding-top 0
     }
 
     &:last-child {
