--- a/client/projects/image.styl
+++ b/client/projects/image.styl
@@ -1,7 +1,7 @@
 .projects-image {
   clearfix()
 
-  margin-bottom unit($lambda, em)
+  margin-bottom unit($lambda * 2, em)
 
   &:last-child {
     margin-bottom 0
