--- a/client/resume/resume.styl
+++ b/client/resume/resume.styl
@@ -1,6 +1,6 @@
 .resume-category {
   .resume-entry:first-of-type {
-    margin-top 0
+    margin-top unit($lambda, em)
   }
 
   +e(container) {
@@ -18,5 +18,5 @@
 }
 
 .resume-entry {
-  margin unit($lambda, em) 0 0
+  margin unit($lambda * 2, em) 0 0
 }
