Lighten the text colors

--- a/client/main.styl
+++ b/client/main.styl
@@ -20,8 +20,8 @@ m(name) {
 
 // Colors
 $my-green = #198565
-$darker-gray = #444
-$dark-gray = #666
+$darker-gray = #555
+$dark-gray = lighten($darker-gray, 30%)
 $light-gray = #bbb
 $white = white
 $header-ratio = 1.25
