--- a/client/content/footer/info_tags.styl
+++ b/client/content/footer/info_tags.styl
@@ -9,6 +9,10 @@
     margin-right .2em
   }
 
+  +e(back-icon) {
+    color $my-green
+  }
+
   +e(resume-icon) {
     .fa-file-text {
       margin -1px 0 0 .5px // hard coding
