Separate by current

--- a/client/main.styl
+++ b/client/main.styl
@@ -132,6 +132,7 @@ a {
 @require './my/email'
 @require './resume/notes'
 @require './routes/not_found_handler'
+@require './portfolio/handler'
 @require './projects/content'
 @require './projects/grid'
 @require './projects/image'
