Add portfolio blurb

--- a/client/portfolio/handler.styl
+++ b/client/portfolio/handler.styl
@@ -1,5 +1,5 @@
 .portfolio-handler {
-  +e(grid) {
-    margin-top unit(2 * $lambda, em)
+  +e(section) {
+    padding unit(2 * $lambda, em) 0 unit($lambda, em)
   }
 }
