--- a/client/projects/grid.styl
+++ b/client/projects/grid.styl
@@ -1,22 +1,17 @@
 .projects-grid {
   +e(item) {
-    col(1/3)
+    padding unit($lambda, em) 0
 
     h2 {
       text-align center
     }
 
-    +below('m') {
-      stack()
-      padding unit($lambda, em) 0
+    +above('xl') {
+      col(1/3, cycle: 3)
     }
-  }
 
-  +e(chunk) {
-    clearfix()
-
-    +above('m') {
-      padding unit($lambda, em) 0
+    +between('m', 'l') {
+      col(1/2, cycle: 2)
     }
   }
 }
