Move h2 padding into margin

--- a/client/main.styl
+++ b/client/main.styl
@@ -85,7 +85,8 @@ h1 {
 h2 {
   font-size unit($h2-lambda, em)
   font-weight bold
-  line-height (($lambda * 2) / $h2-lambda)
+  line-height (($lambda * 1.5) / $h2-lambda)
+  margin unit($lambda / $h2-lambda / 2, em) 0
 }
 
 h3 {
