--- a/client/content/footer/info_tags.styl
+++ b/client/content/footer/info_tags.styl
@@ -19,9 +19,9 @@
     }
   }
 
-  +e(email-icon) {
-    .fa-envelope {
-      margin-top -1px // hard coding
+  +e(blog-icon) {
+    .fa-pencil {
+      margin -1px 0 0 1px // hard coding
     }
   }
 }
