Show projects on technologies page

--- a/client/fragments/bullet_list.styl
+++ b/client/fragments/bullet_list.styl
@@ -2,7 +2,7 @@
   list-style disc
   padding-left unit($lambda, em)
 
-  +e(item) {
+  +e(item-spaced) {
     margin-top unit($lambda, em)
 
     &:first-child {
