--- a/client/content/footer/footer.styl
+++ b/client/content/footer/footer.styl
@@ -28,9 +28,9 @@
     }
 
     small {
-      display: inline-block;
-      font-weight: normal;
-      font-size: 65%;
+      display inline-block
+      font-size 65%
+      font-weight normal
     }
   }
 
@@ -44,12 +44,12 @@
   }
 
   +e(section-heading) {
-    font-weight: bold;
+    font-weight bold
   }
 
   +e(main-links) {
     a {
-      display: block;
+      display block
     }
   }
 }
