Add work together and testimonials page

--- a/client/main.styl
+++ b/client/main.styl
@@ -146,3 +146,5 @@ a {
 @require './shared/pdf'
 @require './technologies/handler'
 @require './technologies/list'
+@require './testimonials/list'
+@require './work_together/handler'
