--- a/client/projects/grid.styl
+++ b/client/projects/grid.styl
@@ -1,4 +1,10 @@
 .projects-grid {
+  +e(heading) {
+    +below('s') {
+      text-align center
+    }
+  }
+
   +e(item) {
     padding unit($lambda, em) 0
 
