--- a/client/portfolio/blurb.styl
+++ b/client/portfolio/blurb.styl
@@ -5,28 +5,31 @@
 
   +e(portrait) {
     background-size cover
+    border-radius 50%
     padding-bottom 100%
   }
 
   +e(portrait-container) {
-    col(1/3)
+    col(1/4)
 
     +below('s') {
       stack()
+      padding 0 unit($lambda, em) unit($lambda, em)
     }
   }
 
   +e(text-container) {
-    col(2/3)
+    col(3/4)
 
     +below('s') {
       stack()
-      margin-top unit($lambda, em)
+      text-align center
     }
   }
 
   +e(mobile-heading) {
     display none
+    text-align center
 
     +below('s') {
       display block
