--- a/client/main.styl
+++ b/client/main.styl
@@ -27,8 +27,8 @@ $white = white
 $header-ratio = 1.25
 
 // Borders
-$colored-border = .1rem $my-green solid
-$muted-border = .1rem $light-gray solid
+$colored-border = 1px $my-green solid
+$muted-border = 1px $light-gray solid
 
 $h1-lambda = $header-ratio ** 3
 $h2-lambda = $header-ratio ** 2
