Add max-width to portrait

--- a/client/portfolio/blurb.styl
+++ b/client/portfolio/blurb.styl
@@ -15,6 +15,7 @@
     +below('s') {
       stack()
       padding 0 unit($lambda, em) unit($lambda, em)
+      max-width unit($lambda * 10, em)
     }
   }
 
