Separate out testimonials page

--- a/client/main.styl
+++ b/client/main.styl
@@ -146,5 +146,6 @@ a {
 @require './shared/pdf'
 @require './technologies/handler'
 @require './technologies/list'
+@require './testimonials/client'
 @require './testimonials/list'
 @require './work_together/handler'
