--- a/client/testimonials/list.styl
+++ b/client/testimonials/list.styl
@@ -1,26 +1,17 @@
 .testimonials-list {
   +e(item) {
     center()
-    margin-bottom unit(2 * $lambda, em)
+    margin unit(2 * $lambda, em) 0
+    padding-top unit(2 * $lambda, em) // Padding is important because of hash navigation
   }
 
   +e(item-person) {
     col(1/4)
-    text-align center
 
     +below('s') {
       stack()
       padding 0 unit(1 * $lambda, em)
     }
-  }
-
-  +e(item-portrait) {
-    background-position center
-    background-size cover
-    border-radius 50%
-    margin-bottom unit(.5 * $lambda, em)
-    padding-bottom 100%
-    width 100%
   }
 
   +e(item-quote) {
