--- a/client/work_together/handler.styl
+++ b/client/work_together/handler.styl
@@ -11,4 +11,24 @@
       margin-bottom 0
     }
   }
+
+  +e(client) {
+    margin-bottom unit($lambda * 2, em)
+
+    +above('xl') {
+      col(1/4, cycle: 4)
+    }
+
+    +at('l') {
+      col(1/3, cycle: 3)
+
+      &:last-child {
+        display none
+      }
+    }
+
+    +at('m') {
+      col(1/2, cycle: 2)
+    }
+  }
 }
