--- a/client/content/footer/footer.styl
+++ b/client/content/footer/footer.styl
@@ -4,7 +4,7 @@
 .content-footer {
   +e(bottom) {
     margin-top unit(2 * $lambda, em)
-    background-color $my-green
+    background-color $main-color
     color $white
     padding 2em 0
 
