--- a/client/content/navbar.styl
+++ b/client/content/navbar.styl
@@ -9,7 +9,7 @@ $navbar-lambda = 3 * $lambda
     top unit($navbar-lambda, em)
     right 0
     border-left $colored-border
-    background: $white
+    background $white
 
     a {
       display block
