--- a/client/content/footer/footer.styl
+++ b/client/content/footer/footer.styl
@@ -6,7 +6,7 @@
     margin-top unit(2 * $lambda, em)
     background-color $main-color
     color $white
-    padding 2em 0
+    padding 3em 0 6em
 
     h2 {
       margin 0
